<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".contenido">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="113dp"
        android:layout_height="71dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="544dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="106dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="206dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textSize="20dp"


               android:text="@string/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView2"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView3"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView4"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView5"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView6"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView7"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/textView8"
                android:background="@drawable/button_rounded_border"
                android:textColor="#ffff"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="69dp"

                android:onClick="bpb"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social"

                />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b4"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b6"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b8"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b10"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b12"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton10"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b14"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />

            <ImageButton
                android:id="@+id/imageButton11"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:onClick="b17"
                app:srcCompat="@android:drawable/ic_menu_info_details"
                android:background="@drawable/button_social" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginEnd="171dp"
        android:layout_marginRight="171dp"
        android:layout_marginBottom="36dp"
        android:onClick="salir"
        android:text="@string/button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_rounded_border"
        android:textColor="#ffff"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>